--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "testWatch": "jest --watchAll",
     "start": "node src/index.js",
     "dev": "nodemon dev/server.ts",
-    "build": "tsc -p ."
+    "compile": "tsc -p ."
   },
   "repository": {
     "type": "git"
