--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "NetGuru Node Assessment",
   "scripts": {
+    "compile": "tsc -p .",
     "test": "jest",
-    "testWatch": "jest --watchAll",
-    "start": "node src/index.js",
-    "dev": "nodemon dev/server.ts",
-    "compile": "tsc -p ."
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git"
@@ -55,6 +53,7 @@
     "lodash": "^4.17.19",
     "mocha": "^7.0.1",
     "moment": "^2.27.0",
+    "mongodb": "^3.6.3",
     "mongoose": "~5.8.11",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
